Fixed overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-   overflow-y: hidden;
+    overflow: hidden;
   }
 
 }
